{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 135,
  "lineage": "62694df5-2633-9ce5-059b-bfbee3fa376f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:internet-gateway/igw-0629363e7416b46ca",
            "id": "igw-0629363e7416b46ca",
            "owner_id": "840134588965",
            "tags": {
              "Clase": "4",
              "Name": "EducacionIT-igw"
            },
            "tags_all": {
              "Clase": "4",
              "Name": "EducacionIT-igw"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090762e42cefc0196",
            "association_id": "eipassoc-083f01c8820457d14",
            "connectivity_type": "public",
            "id": "nat-0dc59ae808e79cdd9",
            "network_interface_id": "eni-01ac520f32cd92f81",
            "private_ip": "172.16.5.3",
            "public_ip": "3.217.88.225",
            "subnet_id": "subnet-04b2f2c8224d24c93",
            "tags": {
              "Clase": "4",
              "Name": "EducacionIT-nat-public1-us-east-1a"
            },
            "tags_all": {
              "Clase": "4",
              "Name": "EducacionIT-nat-public1-us-east-1a"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:route-table/rtb-0969347355b5ddf50",
            "id": "rtb-0969347355b5ddf50",
            "owner_id": "840134588965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0dc59ae808e79cdd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Clase": "4",
              "Name": "EducacionIT-rtb-private"
            },
            "tags_all": {
              "Clase": "4",
              "Name": "EducacionIT-rtb-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:route-table/rtb-0f181b6a5c6a081de",
            "id": "rtb-0f181b6a5c6a081de",
            "owner_id": "840134588965",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0629363e7416b46ca",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Clase": "4",
              "Name": "EducacionIT-rtb-public"
            },
            "tags_all": {
              "Clase": "4",
              "Name": "EducacionIT-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-045b92a1e0d875e5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.192.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045b92a1e0d875e5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private1-us-east-1a"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private1-us-east-1a"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-0f8dde78093ecccd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.208.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8dde78093ecccd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private2-us-east-1b"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private2-us-east-1b"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-04b2f2c8224d24c93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b2f2c8224d24c93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public3-us-east-1a"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public3-us-east-1a"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-06c8b914c250aa57f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.224.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c8b914c250aa57f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private4-us-east-1b"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private4-us-east-1b"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-06aae5860cbaa859b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06aae5860cbaa859b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public1-us-east-1a"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public1-us-east-1a"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-092540aef7951cd40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092540aef7951cd40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public2-us-east-1b"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public2-us-east-1b"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_7",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-09cfaa4c2301d0fa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.240.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cfaa4c2301d0fa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private3-us-east-1a"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-private3-us-east-1a"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        },
        {
          "index_key": "subnet_8",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:subnet/subnet-015522a3e6fbdf8f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015522a3e6fbdf8f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "840134588965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public4-us-east-1b"
            },
            "tags_all": {
              "Clase": "6",
              "Name": "EducacionIT-subnet-public4-us-east-1b"
            },
            "vpc_id": "vpc-0e01f23a575945356"
          },
          "dependencies": [
            "aws_vpc.VPC_Terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_Terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:840134588965:vpc/vpc-0e01f23a575945356",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-079f8510a399304db",
            "default_route_table_id": "rtb-0f181b6a5c6a081de",
            "default_security_group_id": "sg-013cacb02d1e0e18b",
            "dhcp_options_id": "dopt-d10105aa",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e01f23a575945356",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f181b6a5c6a081de",
            "owner_id": "840134588965",
            "tags": {
              "Clase": "4",
              "Name": "EducacionIT-vpc"
            },
            "tags_all": {
              "Clase": "4",
              "Name": "EducacionIT-vpc"
            }
          }
        }
      ]
    }
  ]
}